--- a/css/main.css
+++ b/css/main.css
@@ -26,7 +26,6 @@ body main section.middle-wrapper {
   top: 0;
   margin: auto;
   padding: 0 1.875rem;
-  overflow: hidden;
 }
 body main section.middle-wrapper > .mini-games-head {
   width: 100%;
@@ -44,6 +43,9 @@ body main section.middle-wrapper > .mini-games-head > h1 {
   justify-content: center;
   letter-spacing: 0.3125rem;
   user-select: none;
+}
+body main section.middle-wrapper > .mini-games-head > h1:hover > p {
+  animation: linear bounceTitle 0.8s;
 }
 body main section.middle-wrapper > .mini-games-head > h1 > p {
   color: #f4ff07;
@@ -97,8 +99,9 @@ body main section.middle-wrapper > .mini-games-head > h1 > p:nth-child(9) {
 body main section.middle-wrapper > .mini-games-content-wrapper {
   width: 100%;
   margin-top: 5.625rem;
+  padding: 2.5rem 0;
   display: grid;
-  grid-template-columns: auto auto auto;
+  grid-template-columns: auto auto;
   justify-content: center;
   align-items: center;
   grid-gap: 3.25rem 5.9375rem;
@@ -136,7 +139,7 @@ body main section.middle-wrapper > .mini-games-content-wrapper > .game-container
   letter-spacing: 0.3125rem;
   filter: drop-shadow(0.5rem 0.5rem 0.3125rem #672ee1);
   transition: all 0.3s cubic-bezier(0.25, 0.46, 0.45, 0.94);
-  transform: translateZ(90px) scale(0.7) translateY(-35px);
+  transform: translateZ(5.625rem) scale(0.7) translateY(-2.1875rem);
 }
 body main section.middle-wrapper > .mini-games-content-wrapper > .game-container.hilo-container .hilo-components {
   width: 100%;
@@ -257,14 +260,14 @@ body main section.middle-wrapper > .mini-games-content-wrapper > .game-container
   left: 0;
   bottom: 4.125rem;
   z-index: 2;
-  transform: translateZ(85px) scale(0.8);
+  transform: translateZ(5.3125rem) scale(0.8);
 }
 body main section.middle-wrapper > .mini-games-content-wrapper > .game-container.keno-container > .keno-components > img:nth-child(4) {
   width: 18.1875rem;
   z-index: -2;
   right: 0;
   top: 0.65rem;
-  transform: translateZ(80px) scale(0.8);
+  transform: translateZ(5rem) scale(0.8);
 }
 body main section.middle-wrapper > .mini-games-content-wrapper > .game-container:hover > .play-overlay {
   top: 0;
@@ -274,6 +277,7 @@ body main section.middle-wrapper > .mini-games-content-wrapper > .game-container
 }
 body main section.middle-wrapper > .mini-games-content-wrapper > .game-container > .game-bg-wrapper {
   width: 100%;
+  height: 100%;
 }
 body main section.middle-wrapper > .mini-games-content-wrapper > .game-container > .game-bg-wrapper > img {
   width: 100%;
@@ -337,6 +341,7 @@ body main .bg-component-wrapper > img {
   position: absolute;
   pointer-events: none;
   user-select: none;
+  height: 100%;
 }
 body main .bg-component-wrapper > .bg-gradient {
   width: 75.125rem;
@@ -344,20 +349,10 @@ body main .bg-component-wrapper > .bg-gradient {
   position: absolute;
   background-image: radial-gradient(#573dc0, #302070, transparent, transparent);
   left: 50%;
-  top: 50%;
   opacity: 0.6;
-  transform: translate(-50%, -50%);
-}
-@keyframes bg_gradient {
-  from {
-    transform: scale(0);
-  }
-  to {
-    transform: scale(1.5);
-  }
+  transform: translate(-50%);
 }
 body main .bg-component-wrapper .cube_lime {
-  width: 100%;
   top: -1.25rem;
   overflow: hidden;
   left: 0;
@@ -372,7 +367,6 @@ body main .bg-component-wrapper .cube_lime {
   }
 }
 body main .bg-component-wrapper .cube_lime2 {
-  width: 100%;
   top: -12.25rem;
   overflow: hidden;
   left: 0;
@@ -389,13 +383,19 @@ body main .bg-component-wrapper .cube_lime2 {
   }
 }
 body main .bg-component-wrapper .cube_purple {
-  width: 100%;
   left: 0;
   top: 0.625rem;
   animation: linear 120s bg infinite alternate;
 }
+@keyframes bg {
+  from {
+    transform: rotate(360deg) translateY(-0.625rem);
+  }
+  to {
+    transform: rotate(0) translateY(0);
+  }
+}
 body main .bg-component-wrapper .cube_purple2 {
-  width: 100%;
   left: 0;
   top: 0.625rem;
   animation: linear 120s bg3 infinite alternate;
@@ -406,21 +406,45 @@ body main .bg-component-wrapper .cube_purple2 {
     opacity: 0.6;
   }
   to {
-    transform: scale(1.1) rotate(30deg) translateY(-13.125rem);
+    transform: scale(1.1) rotate(-230deg) translateY(-13.125rem);
     opacity: 1;
   }
 }
 body main .bg-component-wrapper .cube_red {
-  width: 100%;
   top: 0;
   left: 0;
   animation: linear 120s bg infinite alternate;
 }
 body main .bg-component-wrapper .cube_red2 {
-  width: 100%;
   top: 0;
   left: 0;
   animation: linear 120s bg infinite alternate;
+}
+
+@media screen and (max-width: 41.75rem) {
+  html {
+    font-size: 2vw;
+  }
+
+  body {
+    background: #1b1b22;
+  }
+  body main section.middle-wrapper .mini-games-content-wrapper {
+    grid-template-columns: auto auto;
+    grid-gap: 30px;
+  }
+}
+@media screen and (max-width: 13.75rem) {
+  html {
+    font-size: 3vw;
+  }
+
+  body main section.middle-wrapper > .mini-games-head > h1 {
+    font-size: 15vw;
+  }
+  body main section.middle-wrapper .mini-games-content-wrapper {
+    grid-template-columns: auto;
+  }
 }
 
 /*# sourceMappingURL=main.css.map */
