--- a/css/main.css
+++ b/css/main.css
@@ -101,7 +101,7 @@ body main section.middle-wrapper > .mini-games-content-wrapper {
   margin-top: 5.625rem;
   padding: 2.5rem 0;
   display: grid;
-  grid-template-columns: auto auto;
+  grid-template-columns: auto auto auto;
   justify-content: center;
   align-items: center;
   grid-gap: 3.25rem 5.9375rem;
@@ -277,7 +277,6 @@ body main section.middle-wrapper > .mini-games-content-wrapper > .game-container
 }
 body main section.middle-wrapper > .mini-games-content-wrapper > .game-container > .game-bg-wrapper {
   width: 100%;
-  height: 100%;
 }
 body main section.middle-wrapper > .mini-games-content-wrapper > .game-container > .game-bg-wrapper > img {
   width: 100%;
@@ -341,7 +340,6 @@ body main .bg-component-wrapper > img {
   position: absolute;
   pointer-events: none;
   user-select: none;
-  height: 100%;
 }
 body main .bg-component-wrapper > .bg-gradient {
   width: 75.125rem;
@@ -349,10 +347,19 @@ body main .bg-component-wrapper > .bg-gradient {
   position: absolute;
   background-image: radial-gradient(#573dc0, #302070, transparent, transparent);
   left: 50%;
-  opacity: 0.6;
   transform: translate(-50%);
+  opacity: 0.6;
+}
+@keyframes bg_gradient {
+  from {
+    transform: scale(0);
+  }
+  to {
+    transform: scale(1.5);
+  }
 }
 body main .bg-component-wrapper .cube_lime {
+  width: 100%;
   top: -1.25rem;
   overflow: hidden;
   left: 0;
@@ -367,6 +374,7 @@ body main .bg-component-wrapper .cube_lime {
   }
 }
 body main .bg-component-wrapper .cube_lime2 {
+  width: 100%;
   top: -12.25rem;
   overflow: hidden;
   left: 0;
@@ -383,21 +391,15 @@ body main .bg-component-wrapper .cube_lime2 {
   }
 }
 body main .bg-component-wrapper .cube_purple {
+  width: 100%;
   left: 0;
   top: 0.625rem;
   animation: linear 120s bg infinite alternate;
 }
-@keyframes bg {
-  from {
-    transform: rotate(360deg) translateY(-0.625rem);
-  }
-  to {
-    transform: rotate(0) translateY(0);
-  }
-}
 body main .bg-component-wrapper .cube_purple2 {
+  width: 100%;
   left: 0;
-  top: 0.625rem;
+  top: 0;
   animation: linear 120s bg3 infinite alternate;
 }
 @keyframes bg3 {
@@ -406,45 +408,21 @@ body main .bg-component-wrapper .cube_purple2 {
     opacity: 0.6;
   }
   to {
-    transform: scale(1.1) rotate(-230deg) translateY(-13.125rem);
+    transform: scale(1.1) rotate(30deg) translateY(-13.125rem);
     opacity: 1;
   }
 }
 body main .bg-component-wrapper .cube_red {
+  width: 100%;
   top: 0;
   left: 0;
   animation: linear 120s bg infinite alternate;
 }
 body main .bg-component-wrapper .cube_red2 {
+  width: 100%;
   top: 0;
   left: 0;
   animation: linear 120s bg infinite alternate;
-}
-
-@media screen and (max-width: 41.75rem) {
-  html {
-    font-size: 2vw;
-  }
-
-  body {
-    background: #1b1b22;
-  }
-  body main section.middle-wrapper .mini-games-content-wrapper {
-    grid-template-columns: auto auto;
-    grid-gap: 30px;
-  }
-}
-@media screen and (max-width: 13.75rem) {
-  html {
-    font-size: 3vw;
-  }
-
-  body main section.middle-wrapper > .mini-games-head > h1 {
-    font-size: 15vw;
-  }
-  body main section.middle-wrapper .mini-games-content-wrapper {
-    grid-template-columns: auto;
-  }
 }
 
 /*# sourceMappingURL=main.css.map */
