--- a/scss/main.scss
+++ b/scss/main.scss
@@ -51,7 +51,7 @@ body{
                         font-family: 'luckiest';
                         font-size: 7.5rem;
                         font-weight: 100;
-                        filter: drop-shadow(0.5rem 0.5rem 0.0625rem #672ee1);
+                        filter: drop-shadow(.5rem .5rem 0.0625rem #672ee1);
                         margin: 2.5rem auto;
                         display: flex;
                         justify-content: center;
@@ -142,7 +142,7 @@ body{
                     margin-top: 5.625rem;
                     padding: 2.5rem 0;
                     display: grid;
-                    grid-template-columns: auto auto;
+                    grid-template-columns: auto auto auto;
                     justify-content: center;
                     align-items: center;
                     grid-gap: 3.25rem 5.9375rem;
@@ -186,7 +186,7 @@ body{
                             color: #ffffff;
                             font-size: 5rem;
                             letter-spacing: 0.3125rem;
-                            filter: drop-shadow(0.5rem 0.5rem 0.3125rem #672ee1);
+                            filter: drop-shadow(.5rem .5rem 0.3125rem #672ee1);
                             transition: all 0.3s cubic-bezier(0.250, 0.460, 0.450, 0.940);
                             transform: translateZ(5.625rem) scale(.7) translateY(-2.1875rem);
 
@@ -363,7 +363,7 @@ body{
                                         width:18.1875rem;
                                         z-index: -2;
                                         right: 0;
-                                        top: 0.65rem;
+                                        top: .65rem;
                                         transform: translateZ(5rem) scale(.8);
 
                                     }
@@ -381,8 +381,7 @@ body{
 
                         & > .game-bg-wrapper{
                             width: 100%;
-                            height: 100%;
-                            
+
                             & > img{
                                 width: 100%;
                                 position: absolute;
@@ -465,7 +464,7 @@ body{
                 position: absolute;
                 pointer-events: none;
                 user-select: none;
-                height: 100%;
+
             }
 
             & > .bg-gradient{
@@ -474,14 +473,23 @@ body{
                 position: absolute;
                 background-image: radial-gradient(#573dc0, #302070, transparent, transparent);
                 left: 50%;
-                // top: 50%;
-                opacity: .6;
                 transform: translate(-50%);
+                // top: 50%;
 
+                opacity: .6;
+                // animation: linear bg_gradient 6s infinite alternate;
+                @keyframes bg_gradient {
+                    from{
+                        transform: scale(0);
+                    }
+                    to{
+                        transform: scale(1.5);
+                    }
+                }
             }
     
             .cube_lime{
-                // width: 100%;
+                width: 100%;
                 top: -1.25rem;
                 overflow: hidden;
                 left: 0;
@@ -501,7 +509,7 @@ body{
             }
 
             .cube_lime2{
-                // width: 100%;
+                width: 100%;
                 top: -12.25rem;
                 overflow: hidden;
                 left: 0;
@@ -522,27 +530,17 @@ body{
             }
     
             .cube_purple{
-                // width: 100%;
+                width: 100%;
                 left: 0;
                 top: 0.625rem;
                 animation: linear 120s bg infinite alternate;
 
-                @keyframes bg {
-                    from{
-                        transform:  rotate(360deg) translateY(-0.625rem);
-
-                    }
-                    to{
-                        transform:  rotate(0) translateY(0)
-                    }
-                }
-
             }
 
             .cube_purple2{
-                // width: 100%;
+                width: 100%;
                 left: 0;
-                top: 0.625rem;
+                top: 0;
 
                 animation: linear 120s bg3 infinite alternate;
                 
@@ -553,16 +551,15 @@ body{
 
                     }
                     to{
-                        transform: scale(1.1) rotate(-230deg) translateY(-13.125rem);
+                        transform: scale(1.1) rotate(30deg) translateY(-13.125rem);
                         opacity: 1;
 
                     }
                 }
-
             }
     
             .cube_red{
-                // width: 100%;
+                width: 100%;
                 top: 0;
                 left: 0;
                 animation: linear 120s bg infinite alternate;
@@ -570,7 +567,7 @@ body{
             }
 
             .cube_red2{
-                // width: 100%;
+                width: 100%;
                 top: 0;
                 left: 0;
                 animation: linear 120s bg infinite alternate;
@@ -578,58 +575,3 @@ body{
         }
     }
 }
-
-
-@media screen and(max-width:41.75rem) {
-    html{
-        font-size: 2vw;
-    }
-
-    body{
-        background: $bgColor;
-    
-        main{
-    
-            section{
-    
-                &.middle-wrapper{
-
-                    .mini-games-content-wrapper{
-                        grid-template-columns: auto auto;
-                        grid-gap: 30px;
-                    }
-                }
-            }
-        }
-    }
-}
-
-
-@media screen and(max-width:13.75rem) {
-    html{
-        font-size: 3vw;
-    }
-
-    body{
-    
-        main{
-    
-            section{
-    
-                &.middle-wrapper{
-                    & > .mini-games-head{
-
-                        & > h1{
-                            font-size: 15vw;
-                        }
-                    }
-                    .mini-games-content-wrapper{
-                        grid-template-columns: auto ;
-                    }
-                }
-            }
-        }
-    }
-}
-
-
